--- a/force-app/main/default/classes/AccountListController.cls
+++ b/force-app/main/default/classes/AccountListController.cls
@@ -2,6 +2,7 @@ public class AccountListController {
     //test 1
     @auraEnabled
     public static List<Account> getAccounts(){
+        //new com
         return null;
     }
 }
