--- a/force-app/main/default/classes/AccountListController.cls
+++ b/force-app/main/default/classes/AccountListController.cls
@@ -2,6 +2,7 @@ public class AccountListController {
     //test3333334444444
     @auraEnabled
     public static List<Account> getAccounts(){
+        //tets 222
         return null;
     }
 }
