--- a/force-app/main/default/classes/AccountListController.cls
+++ b/force-app/main/default/classes/AccountListController.cls
@@ -1,4 +1,4 @@
-public class AccountListController {
+public class AccountListController {//new sidd2
     //test 1
     @auraEnabled
     public static List<Account> getAccounts(){
